--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1>Reko</h1>
-<div>För att kunna testa vår tjänst behöver man välj typ av användare</div>
+<div>För att kunna testa vår tjänst behöver man välja typ av användare:</div>
 <div>
 <form method="Post">
     
