--- a/templates/manage_product.html
+++ b/templates/manage_product.html
@@ -30,7 +30,7 @@ Hantera produkt
         <label class="form-check-label" for="flexSwitchCheckDefault">Produkt finns tillgänglig</label>
       </div>
       {%endif%} -->
-      <a class="btn btn-outline-success me-md-1"  href="#" class="card-link" disabled>Uppdatera</a>
+      <!--<a class="btn btn-outline-success me-md-1"  href="#" class="card-link" disabled>Uppdatera</a>   Kommenterat bort för prototypen så länge // GE-->
     </div>
   </div>
 {%endif%}
