--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -37,6 +37,16 @@
             placeholder="Produktbeskrivning"
         />
     </div>
+    <div class="form-group">
+        <label for="productInventory">Saldo</label>
+        <input 
+            type="text" 
+            class="form-control" 
+            id="productInventory" 
+            name="productInventory" 
+            placeholder="Produktsaldo"
+        />
+    </div>
 
     <div class="form-group">
         <input class="form-check-input" type="checkbox" value="True" name="isForSale" id="isForSale">
